[build-system]
requires = [
  "setuptools>=42",
  "setuptools-git-versioning<2",
  "versioneer[toml]>=0.29,<1.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymovements"
description = "A python package for processing eye movement data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
maintainers = [
  {name = "Daniel Krakowczyk", email = "daniel.krakowczyk@uni-potsdam.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = [
  "matplotlib>=3.5.0,<3.9",
  "numpy>=1.20.0,<2",
  "pandas>=1.2.0,<3",
  "polars>=0.19.0,<0.20.0",
  "pyarrow>=11.0.0,<14",
  "pyopenssl>=16.0.0,<24.0.0",
  "scipy>=1.8.0,<2",
  "tqdm>=4.27.0,<5"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  "ipykernel>=6.13.0",
  "nbsphinx>=0.8.8",
  "pandoc",
  "pybtex",
  "pydata-sphinx-theme>=0.12",
  "sphinx>=5.3.0",
  "sphinx-copybutton>=0.4.0",
  "sphinx-favicon>=1.0.1",
  "sphinx_design>=0.3.0",
  "sphinx_mdinclude>=0.5.0",
  "sphinxcontrib.datatemplates>=0.9.0",
  "sphinxcontrib.bibtex>=2.4.1"
]
test = [
  "pybtex",
  "pytest>=6.0.0",
  "pytest-cov>=4.0.0",
  "types-tqdm",
  "typing_extensions"
]

[project.urls]
Homepage = "https://github.com/aeye-lab/pymovements"
"Source Code" = "https://github.com/aeye-lab/pymovements"
Documentation = "https://pymovements.readthedocs.io/en/stable"
"Bug Tracker" = "https://github.com/aeye-lab/pymovements/issues"
Changelog = "https://github.com/aeye-lab/pymovements/releases"

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 1

[tool.coverage.paths]
source = [
  '{toxworkdir}/src/pymovements',
  '*/.tox/*/lib/python*/site-packages/pymovements',
  '*/src/pymovements'
]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.coverage.run]
parallel = true
branch = true
omit = [
  'docs/*',
  'src/pymovements/_version.py',
  'tests/*'
]

[tool.doc8]
max-line-length = 100

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs.*"
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra -l --tb=long --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
filterwarnings = [
  "error",
  "ignore:Both a distance column and experiment.*:UserWarning",
  "ignore:pkg_resources is deprecated.*:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
  "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
  "ignore:`groupby` is deprecated. It has been renamed to `group_by`.:DeprecationWarning",
  "ignore:`lengths` is deprecated. It has been renamed to `len`.:DeprecationWarning",
  "ignore:`map` is deprecated. It has been renamed to `map_batches`.:DeprecationWarning",
  "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning",
]
testpaths = ['tests', 'src']

[tool.setuptools-git-versioning]
enabled = true

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pymovements/_version.py"
versionfile_build = "src/pymovements/_version.py"
tag_prefix = "v"
parentdir_prefix = "pymovements-"
