[build-system]
requires = [
  "setuptools>=61.0.0,<81",
  "setuptools-git-versioning<3",
  "versioneer[toml]>=0.29,<1.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pymovements"
description = "A python package for processing eye movement data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
maintainers = [
  {name = "Daniel Krakowczyk", email = "daniel.krakowczyk@uni-potsdam.de"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = [
  "deprecated>=1.2.18,<1.3",
  "matplotlib>=3.8.0,<3.11",
  "fastexcel>=0.13.0,<1.0",
  "numpy>=1.22.4,<2.3",
  "pandas>=2.1.4,<2.4",
  "polars>=1.31.0,<1.32",
  "pyarrow>=11.0.0,<21.1",
  "pyopenssl>=16.0.0,<25.3",
  "pyreadr>=0.5.2,<0.6",
  "pyyaml>=6.0.2,<6.1",
  "scipy>=1.8.0,<1.16",
  "tqdm>=4.27.0,<4.68",
  "typing_extensions>=4.0.0,<4.16"
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
  "ipykernel>=6.13.0,<6.31",
  "ipywidgets>=8.1.7,<8.2",
  "nbconvert>=7.0.0,<7.17",
  "nbsphinx>=0.8.8,<0.10",
  "pandoc",
  "pybtex<0.25.2",
  "pydata-sphinx-theme>=0.12",
  "setuptools>=61.0.0,<81",
  "sphinx>=7.0,<8.3",
  "sphinx-copybutton>=0.4.0",
  "sphinx-favicon>=1.0.1",
  "sphinx_design>=0.3.0",
  "sphinx_mdinclude>=0.5.0",
  "sphinxcontrib.datatemplates>=0.9.0",
  "sphinxcontrib.bibtex>=2.4.1"
]
dev = [
  "tox>=4.12.0,<4.31",
  "pybtex<0.25.2",
  "pytest>=7.0.0",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=4.0.0",
  "setuptools>=61.0.0,<81",
  "types-tqdm>=4.64.0,<5",
  "pre-commit>=3.0.0,<4.4.0",
  "pylint>=2.0.0,<3.4"
]

[project.urls]
Homepage = "https://github.com/aeye-lab/pymovements"
"Source Code" = "https://github.com/aeye-lab/pymovements"
Documentation = "https://pymovements.readthedocs.io/en/stable"
"Bug Tracker" = "https://github.com/aeye-lab/pymovements/issues"
Changelog = "https://github.com/aeye-lab/pymovements/releases"

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.autopep8]
max_line_length = 100
in-place = true
recursive = true
aggressive = 1

[tool.coverage.paths]
source = [
  '{toxworkdir}/src/pymovements',
  '*/.tox/*/lib/python*/site-packages/pymovements',
  '*/src/pymovements'
]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.coverage.run]
parallel = true
branch = true
omit = [
  'docs/*',
  'src/pymovements/_version.py',
  'tests/*'
]

[tool.doc8]
max-line-length = 100

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
disable_error_code = ["override"]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deprecated.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs.*"
check_untyped_defs = false
disallow_untyped_defs = false

[tool.pydoclint]
skip-checking-raises = true

[tool.pytest.ini_options]
addopts = "-ra -l --tb=long --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
filterwarnings = [
  "error",
  "ignore:pkg_resources is deprecated.*:UserWarning:pybtex",
  "ignore:pkg_resources is deprecated.*:DeprecationWarning:pybtex",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*:DeprecationWarning",
  "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
  "ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning",
  "ignore:datetime.datetime.utcfromtimestamp() is deprecated.*:DeprecationWarning"
]
testpaths = ['tests', 'src']

[tool.setuptools.package-data]
pymovements = ["datasets/*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-git-versioning]
enabled = true

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/pymovements/_version.py"
versionfile_build = "src/pymovements/_version.py"
tag_prefix = "v"
parentdir_prefix = "pymovements-"
