[metadata]
name = pymovements
version = 0.0.5
author = Daniel Krakowczyk
author_email = daniel.krakowczyk@uni-potsdam.de
description = Package for processing eye tracking data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aeye-lab/pymovements
project_urls =
    Bug Tracker = https://github.com/aeye-lab/pymovements/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.10.0

[options.extras_require]
test =
     pytest>=6.0.0
     pytest-cov>=3.0.0
docs =
     sphinx-copybutton>=0.4.0
     sphinx-rtd-theme>=1.0.0
     sphinxcontrib.datatemplates>=0.9.0
     sphinxcontrib.bibtex>=2.4.1
     nbsphinx>=0.8.8
     ipykernel>=6.13.0

[options.packages.find]
where = src