[metadata]
name = pymovements
version = 0.0.8
author = Daniel Krakowczyk
author_email = daniel.krakowczyk@uni-potsdam.de
description = Package for processing eye tracking data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aeye-lab/pymovements
project_urls =
    Bug Tracker = https://github.com/aeye-lab/pymovements/issues
    Source Code = https://github.com/aeye-lab/pymovements
    Documentation = https://pymovements.readthedocs.io/en/latest
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.10.0
    scipy>=1.5.4
    matplotlib>=3.0.0
    polars[pandas,pyarrow]>=0.15.0
    tqdm>=4.0.0

[options.extras_require]
test =
     pytest>=6.0.0
     pytest-cov>=3.0.0
     pybtex
     types-tqdm
docs =
     sphinx-copybutton>=0.4.0
     sphinx-rtd-theme>=1.0.0
     sphinxcontrib.datatemplates>=0.9.0
     sphinxcontrib.bibtex>=2.4.1
     nbsphinx>=0.8.8
     ipykernel>=6.13.0
     pybtex
     pandoc

[options.packages.find]
where = src
