[metadata]
name = pymovements
version = 0.2.0
url = https://github.com/aeye-lab/pymovements
project_urls =
    Bug Tracker = https://github.com/aeye-lab/pymovements/issues
    Source Code = https://github.com/aeye-lab/pymovements
    Documentation = https://pymovements.readthedocs.io/en/stable
    Change Log = https://github.com/aeye-lab/pymovements/releases
author = Daniel Krakowczyk
author_email = daniel.krakowczyk@uni-potsdam.de
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed
description = A python package for processing eye movement data
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    matplotlib>=3.0.0
    numpy>=1.10.0
    pandas>1.0.0
    polars>=0.15.0
    pyarrow>=4.0.0
    scipy>=1.5.4
    tqdm>=4.0.0
python_requires = >=3.7
packages = find:
package_dir =
    = src

[options.extras_require]
docs =
     ipykernel>=6.13.0
     nbsphinx>=0.8.8
     pandoc
     pybtex
     sphinx-copybutton>=0.4.0
     sphinx-rtd-theme>=1.0.0
     sphinxcontrib.datatemplates>=0.9.0
     sphinxcontrib.bibtex>=2.4.1
test =
     pybtex
     pytest>=6.0.0
     pytest-cov>=4.0.0
     types-tqdm

[options.packages.find]
where = src
